--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		   text-align: center;
 		}
 		body{
-			background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSnTXpKPv0XLihzRLrEVyYPWz2TdCzotvlCFpPz2SxfT-wu4PZaoqPcDzdL9JLKOZuEmQQ&usqp=CAU");
+			background-image: url("https://imgv2-2-f.scribdassets.com/img/document/508232657/original/a1b0b8c596/1?v=1");
 			width: 100%;
 			height: 100vh%;
 			background-size: cover;
