--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 <body>
 	<div class="container">
 		<form id="loginForm">
-			<h1>PÁGINA DE ACCESO BRYAN</h1>
-			<h2> josue peralta</h2>
+			<h1>PÁGINA DE ACCESO</h1>
+			<h2>Mi pasaporte al exito</h2>
 			<br>
 			<div class="mb-3">
 				<label for="email">Usuario</label>
@@ -85,6 +85,9 @@
 			var password = document.getElementById("password").value;
 
 if (email==="eber@email.com" && password==="123"){
+	window.location.href="https://josueperalta219-cell.github.io/proyecto123/";
+	
+if (email==="lcm@email.com" && password==="123"){
 	window.location.href="https://josueperalta219-cell.github.io/proyecto123/";
 }
 
